examples/errors/18_cant_extend_group/layout.tml
#use <custom_widgets.tmd>

<definitions::Window>
    <definitions::Text value="First widget"/>
    <definitions::Text value="Second widget"/>
    <definitions::Text value="Third widget"/>
    <definitions::Text value="Fourth widget"/>
    <List/>
</definitions::Window>